forgot to change from className to class in web-maker home.html

--- a/web-maker/src/home.html
+++ b/web-maker/src/home.html
@@ -54,29 +54,29 @@
 </style>
 
 <body>
-    <div className="landingPage">
-        <p className="mainHeader"> Hi, this is web-maker</p>
+    <div class="landingPage">
+        <p class="mainHeader"> Hi, this is web-maker</p>
         <div class="line">
-            <p className="seccondaryHeader"> Web-maker is a tool to create simple web applications with zero coding
+            <p class="seccondaryHeader"> Web-maker is a tool to create simple web applications with zero coding
                 skills </p>
         </div>
-        <p className="seccondaryHeader"> Make you own web in three easy steps </p>
-        <p className="explication">
+        <p class="seccondaryHeader"> Make you own web in three easy steps </p>
+        <p class="explication">
             1. Creat a project
         </p>
-        <p className="explication">
+        <p class="explication">
             2. Add all the items you need
         </p>
-        <p className="explication">
+        <p class="explication">
             3. Export it into a finished HTML file
         </p>
-        <p className="seccondaryHeader">
+        <p class="seccondaryHeader">
             Your new web is on a click of a button
         </p>
         <a href="/web-maker">
-            <button className="button"> Start </button>
+            <button class="button"> Start </button>
         </a>
-        <p className="seccondaryHeader">
+        <p class="seccondaryHeader">
             Good luck on your jouney
         </p>
     </div>
