--- a/web-maker/src/home.html
+++ b/web-maker/src/home.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <style>
+    body  {
+        margin: 0%;
+    }
     .landingPage {
         --secondaryColor: #ccffee;
         --primaryColor: rgb(43, 255, 184);
@@ -48,7 +51,7 @@
     }
 
     .line {
-        border: solid 1px;
+        border-bottom: solid 1px;
         margin: 2%;
     }
 </style>
