--- a/web-maker/src/home.html
+++ b/web-maker/src/home.html
@@ -10,6 +10,7 @@
 </head>
 <style>
     body  {
+        font-family: -apple-system, BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
         margin: 0%;
     }
     .landingPage {
