Added a move objects function in web-maker

--- a/web-maker/src/home.html
+++ b/web-maker/src/home.html
@@ -37,12 +37,13 @@
     }
 
     .button {
-        border: 1vmax solid var(--secondaryColor);
+        border: 1vmax solid var(--primaryColor);
         font-size: 10vmax;
         background: var(--primaryColor);
         color: var(--secondaryColor);
         /* height: 10vmax; */
         width: 26vmax;
+        transition-duration: 0.5s;
     }
 
     .button:hover {
