--- a/web-maker/public/index2.html
+++ b/web-maker/public/index2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Web maker </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web maker</title>
+  </head>
+  <body>
     <a href="./index1.html"> Start editing </a>
-</body>
+  </body>
 </html>
