Revert "chnaged file name from home to index.html in homepage"
This reverts commit 697bb2f244b9106957d116a09799dd2167a13619.

--- a/web-maker/homepage/guide.html
+++ b/web-maker/homepage/guide.html
@@ -85,8 +85,8 @@
 			<div id="render">
 				<div class="renderItem">
 					Add items: click the plus icon on the left and choose which item you
-					want to add. You options are: title, subtitle, header, text, image,
-					table and columns.
+					want to add. You options are: title, subtitel, header, text, image,
+					table and collumns.
 				</div>
 				<div class="renderItem">
 					Remove items: long press the item you want to remove and click remove
