Update to hompage

--- a/web-maker/homepage/index.html
+++ b/web-maker/homepage/index.html
@@ -102,8 +102,8 @@
 				<button class="button">Start</button>
 			</a>
 			<p></p>
-			<p class="seccondaryHeader">Make you own web in three easy steps</p>
-			<p class="explication">1. Creat a project</p>
+			<p class="seccondaryHeader">Make you own web in 3 easy steps</p>
+			<p class="explication">1. Create a project</p>
 			<p class="explication">2. Add all the items you need</p>
 			<p class="explication">3. Export it into a finished HTML file</p>
 			<a href="./guide.html">
